collapsed sidebar icon fix

--- a/src/less/layout/_sidebar.less
+++ b/src/less/layout/_sidebar.less
@@ -44,7 +44,6 @@
       a {
         .clearfix;
         padding-right: 15px;
-        padding: 0 15px 0 6px;
         display: block;
         white-space: nowrap;
 
